tests/baselines/reference/objectLiteralMemberWithModifiers1.errors.txt
tests/cases/compiler/objectLiteralMemberWithModifiers1.ts(1,11): error TS1184: Modifiers cannot appear here.


==== tests/cases/compiler/objectLiteralMemberWithModifiers1.ts (1 errors) ====
    var v = { public foo() { } }
              ~~~~~~
!!! error TS1184: Modifiers cannot appear here.